@startuml Builder
scale 1024 height
class Director {
  Construct()
}

note as N1
  for all objects in structure {
    builder->BuildPart()
  }
end note

interface Builder {
  BuildPart()
}
class ConcreteBuilder {
  BuildPart()
  GetResult()
}

Director::Construct <-- N1
Director o- Builder
Builder <|-- ConcreteBuilder
ConcreteBuilder .> Product

@enduml